--- a/stylesheet.css
+++ b/stylesheet.css
@@ -14,7 +14,7 @@ h1 {
     text-decoration: none;
 }
 
-#navigation a:hover {
+li a:hover {
 	color: #990000;
 }
 
@@ -40,7 +40,16 @@ html {
 	background-color: #f5f5f5;
 }
 
-#navigation #current_page {
+#current_page a{
 	color: green;
 	font-size: 20px;
 }
+
+ul li {
+	list-style-type: none;
+	padding: 0;
+	margin: 0;
+	display: inline;
+	justify-content: center;
+}
+
