--- a/stylesheet2.css
+++ b/stylesheet2.css
@@ -1,60 +1,50 @@
-h1 {
-	text-align: center;
-	position: static;
-}
-
-#navigation {
-	color: #000000;
-	position: inline;
-    margin: auto;
-    min-width: 800px;
-    text-align: left;
-    height: 20px;
-    padding: 10px 20px;
-    text-decoration: none;
-}
-
-li a:hover {
-	color: #990000;
-}
-
-title {
-	text-align: center;
-	font-family: Arial;
-}
-
-body h2 {
-	position: static;
-	color: #191919;
-	font-family: Arial;
-	text-align: center;
-}
-
-body p {
-	position: static;
-	color: #333333;
-	font-family: Arial;
-}
-
 html {
-	background-color: #f5f5f5;
+	background-color: white;
 }
 
-#current_page a{
-	color: green;
-	font-size: 20px;
+li a {
+	display: -webkit-flex;
+	text-decoration: none;
+	color: white;
+	justify-content: center;
 }
 
-ul li {
-	display: flex;
-	flex-direction: column;
-	justify-content: flex-end;
-	/*
-	list-style-type: none;
+div a:hover {
+	background-color: #3f7098;
+	color: black;
+}
+
+#current_page a {
+	background-color: #f90409;
+	color: black;
+}
+
+body {
 	padding: 0;
 	margin: 0;
-	display: inline;
-	justify-content: center;
-	*/
+}
+
+.flex-container{
+	display: flex;
+}
+
+.nav-wrapper {
+	position: fixed;
+	top: 0;
+	left: 0;
+}
+
+.sidebar {
+	flex: 0 0 300px;
+	background-color: #48b5e0;
+	list-style-type: none;
+
+}
+
+
+.main {
+	flex: 1 1;
+	padding: 20px;
+	background-color: #415762;
 }
 
