--- a/tic_tac_toe/stylesheet.css
+++ b/tic_tac_toe/stylesheet.css
@@ -32,6 +32,7 @@ body {
 
 .flex-container{
 	display: flex;
+	justify-content: space-around;
 }
 
 .nav-wrapper {
@@ -60,4 +61,20 @@ body {
 	width: 15px;
 	height: 15px;
 	padding: 0.5%;
+}
+
+.gameContainer {
+	display: flex;
+}
+
+.gameContainer__row {
+	flex-direction: row;
+}
+
+.gameContainer__box a{
+	justify-content: center;
+	border-radius: 30px;
+	border-color: white;
+	width: 100px;
+	height: 100px;
 }
