Tied game part of function still not working. Still not saving game data to the score keeper. BUT changed some CSS and it's starting to look better.

--- a/tic_tac_toe/stylesheet.css
+++ b/tic_tac_toe/stylesheet.css
@@ -73,16 +73,17 @@ body {
 
 .gameContainer__box {
 	display: flex;
-	align-content: center;
-	background-color: green;
-	
+	text-align: center;
+	background-color: white;
 	width: 100px;
 	height: 100px;
+	border: 2px solid black;
+	font-size: 100px;
 }
 
-.gameContainer__link {
+.gameContainer__link{
 	
-	color: orange;
+	color: white;
 	font-size: 100px
 }
 
