--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,4 +1,7 @@
 html {
+	height: 100%;
+	margin: 0;
+	padding: 0;
 	background-color: #1a242d;
 }
 
@@ -16,11 +19,12 @@ ul a:hover {
 body {
 	padding: 0;
 	margin: 0;
-	height: 100%;
+	min-height: 100%;
 }
 
 .flex-container{
 	display: flex;
+	height: 100%;
 }
 
 .nav-wrapper {
@@ -56,28 +60,49 @@ body {
 
 
 .navTitles {
-	display: flex;
+	padding-left: 25%;
 
 }
 
 .topLeft {
-	height: 80px;
+	height: 90px;
+	padding-bottom: 20px;
 }
 
 .topLeft__name {
-
+	display: flex;
+	justify-content: center;
 }
 
 .topLeft__icons {
-
+	display: flex;
+	align-items: flex-start;
+	justify-content: center;
 }
 
 .navTitles__page {
-
+	display: flex;
+	justify-content: flex-start;
+	padding-left: 25%;
 }
 
 .social_icon {
-	width: 15px;
-	height: 15px;
-	padding: 0.5%;
+	width: 30px;
+	height: 30px;
+	padding: 10px;
+}
+
+.family {
+	display: flex;
+	flex-direction: row;
+	flex-flow: wrap;
+	justify-content: space-between;
+
+}
+
+.family__pictures {
+	display: flex;
+	width: 325px;
+	height: 335px;
+	padding-top: 30px;
 }
