--- a/tic_tac_toe/stylesheet.css
+++ b/tic_tac_toe/stylesheet.css
@@ -64,7 +64,7 @@ ul a:hover {
 /*********************************CSS for Tic Tac Toe Game********************************************/
 .gameContainer {
 	display: flex;
-	justify-content: flex-end;
+	flex-direction: column;
 }
 
 .gameContainer__row {
@@ -75,20 +75,57 @@ ul a:hover {
 	display: flex;
 	text-align: center;
 	background-color: white;
-	width: 100px;
-	height: 100px;
+	width: 80px;
+	height: 80px;
 	border: 2px solid black;
-	font-size: 100px;
+	font-size: 80px;
 }
 
 .gameContainer__link{
 	
 	color: white;
-	font-size: 100px
+	font-size: 80px
 }
 
 .scoreBoard {
 	display: flex;
 	flex-direction: column;
-
+	padding-top: 10px;
 }
+
+.scoreBoard__links {
+	text-decoration: none;
+	color: #f90409;
+	padding-right: 5px;
+	padding-left: 5px;
+}
+
+.scoreBoard__linkBox {
+	display: flex;
+}
+
+.scoreBoard__scores {
+	padding: 5px;
+	margin: 0;
+	border: 1px solid white;
+	background: #415762;
+	color: white;
+	font-size: 15px;
+}
+
+.gameContainer__board {
+	display: flex;
+	justify-content: center;
+}
+
+.gameContainer__scores {
+	display: flex;
+	justify-content: center;
+}
+
+.gameContainer__winDisplay {
+	display: flex;
+	justify-content: center;
+	font-size: 25px;
+}
+
