--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,5 +1,5 @@
 html {
-	height: 100%;
+	min-height: 100%;
 	margin: 0;
 	padding: 0;
 	background-color: #1a242d;
@@ -24,7 +24,7 @@ body {
 
 .flex-container{
 	display: flex;
-	height: 100%;
+	min-height: 100%;
 }
 
 .nav-wrapper {
@@ -32,7 +32,7 @@ body {
 	top: 0;
 	left: 0;
 	width: 300px;
-	height: 100%;
+	min-height: 100%;
 }
 
 .sidebar {
