--- a/tic_tac_toe/stylesheet.css
+++ b/tic_tac_toe/stylesheet.css
@@ -36,13 +36,14 @@ ul a:hover {
 	position: fixed;
 	top: 0;
 	left: 0;
+	background: #415762;
 }
 
 .sidebar {
-	flex: 0 0 300px;
+	display: flex;
 	background-color: #415762;
 	list-style-type: none;
-	height: 100%;
+
 }
 
 .nav-wrapper ul {
@@ -50,16 +51,12 @@ ul a:hover {
 }
 
 .main {
-	flex: 1 1 auto;
-	padding: 20px;
+	height: 100%;
+	width: 100%;
+	padding: 0;
 	background-color: #48b5e0;
 }
 
-.social_icon {
-	width: 15px;
-	height: 15px;
-	padding: 0.5%;
-}
 
 /*********************************CSS for Tic Tac Toe Game********************************************/
 .gameContainer {
@@ -135,5 +132,44 @@ ul a:hover {
 	display: flex;
 	justify-content: center;
 	font-size: 25px;
+}
+.nav {
+	display: flex;
+	flex-direction: column;
+	padding-left: 0px;
+}
+
+
+.navTitles {
+	padding-left: 25%;
+
+}
+
+.topLeft {
+	height: 90px;
+	padding-bottom: 20px;
+}
+
+.topLeft__name {
+	display: flex;
+	justify-content: center;
+}
+
+.topLeft__icons {
+	display: flex;
+	align-items: flex-start;
+	justify-content: center;
+}
+
+.navTitles__page {
+	display: flex;
+	justify-content: flex-start;
+	padding-left: 25%;
+}
+
+.social_icon {
+	width: 30px;
+	height: 30px;
+	padding: 10px;
 }
 
