--- a/stylesheet2.css
+++ b/stylesheet2.css
@@ -1,5 +1,6 @@
 html {
 	background-color: white;
+	min-height: 100%;
 }
 
 li a {
@@ -9,7 +10,7 @@ li a {
 	justify-content: center;
 }
 
-ul a:hover {
+/*ul a:hover {
 	background-color: #3f7098;
 	color: black;
 }
@@ -17,21 +18,24 @@ ul a:hover {
 #current_page a {
 	background-color: #f90409;
 	color: black;
-}
+}*/
 
 body {
 	padding: 0;
 	margin: 0;
+	min-height: 100%;
 }
 
 .flex-container{
 	display: flex;
+	min-height: 100%;
 }
 
 .nav-wrapper {
 	position: fixed;
 	top: 0;
 	left: 0;
+	min-height: 100%;
 }
 
 .sidebar {
