--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,8 +1,25 @@
+.footer {
+
+}
+
+p {
+	text-indent: 40px;
+}
+
 html {
-	min-height: 100%;
+	
 	margin: 0;
 	padding: 0;
 	background-color: ;
+}
+
+.link {
+	text-decoration: none;
+	color: #454142;
+}
+
+.link:hover {
+	color: #e5bd7c;
 }
 
 
@@ -19,12 +36,11 @@ html {
 body {
 	padding: 0;
 	margin: 0;
-	min-height: 100%;
 }
 
 .flex-container{
 	display: flex;
-	min-height: 100%;
+	min-height: 100vh;
 }
 
 .nav-wrapper {
@@ -32,7 +48,6 @@ body {
 	top: 0;
 	left: 0;
 	width: 300px;
-	min-height: 100%;
 }
 
 .sidebar {
@@ -52,6 +67,7 @@ body {
 	padding: 20px;
 	background-color: #d5774c;
 	font-family: 'Open Sans', sans-serif;
+
 	
 }
 
@@ -94,6 +110,12 @@ body {
 	padding: 10px;
 }
 
+.social_icon.social_media {
+	width: 45px;
+	height: 45px;
+	padding: 15px;
+}
+
 .family {
 	display: flex;
 	flex-direction: row;
@@ -104,9 +126,9 @@ body {
 
 .family__pictures {
 	display: flex;
-	width: 325px;
+/*	width: 325px;
 	height: 335px;
-	padding-top: 30px;
+	padding-top: 30px;*/
 }
 
 .articleTitles {
