--- a/stylesheet.css
+++ b/stylesheet.css
@@ -10,7 +10,6 @@ html {
 	
 	margin: 0;
 	padding: 0;
-	background-color: ;
 }
 
 .link {
@@ -23,13 +22,13 @@ html {
 }
 
 
-.navTitles__page:hover {
-	background-color: #e5bd7c;
+.navLinks:hover {
+	background-color: #f9d338;
 	color: black;
 }
 
 #current_page {
-	background-color: #454142;
+	background-color: #f9d338;
 	color: black;
 }
 
@@ -50,10 +49,26 @@ body {
 	width: 300px;
 }
 
+.navLinks {
+	border: 1px solid #3c3c3c;
+	background-color: #929294;
+	border-radius: 2px;
+	width: 80%;
+	display: flex;
+	justify-content: center;
+	font-family: 'Roboto Slab', serif;
+
+}
+
+.navLinks__links {
+
+}
+
 .sidebar {
 	display: flex;
-	background-color: #933d30;
+	background-color: #646464;
 	list-style-type: none;
+	border-right: 1px solid #3c3c3c;
 	
 }
 
@@ -65,7 +80,7 @@ body {
 .main {
 	flex: 1 1;
 	padding: 20px;
-	background-color: #d5774c;
+	background-color: #faf8ec;
 	font-family: 'Open Sans', sans-serif;
 
 	
@@ -75,27 +90,35 @@ body {
 	display: flex;
 	flex-direction: column;
 	padding-left: 0px;
+	justify-content: space-between;
 }
 
 .navTitles {
-	padding-left: 25%;
+	padding-left: 40%;
+	font-family: 'Lobster', cursive;
+	font-size: 30px;
+
 
 }
 
 .topLeft {
-	height: 90px;
-	padding-bottom: 20px;
+	display: flex;
+	flex-direction: column;
+	height: 120px;
+	background: #f9d338;
 }
 
 .topLeft__name {
 	display: flex;
 	justify-content: center;
+	color: #3c3c3c;
 }
 
 .topLeft__icons {
 	display: flex;
 	align-items: flex-start;
 	justify-content: center;
+
 }
 
 .navTitles__page {
@@ -108,6 +131,12 @@ body {
 	width: 30px;
 	height: 30px;
 	padding: 10px;
+}
+
+.social_icon.gitHub {
+	width: 25px;
+	height: 25px;
+	padding-top: 12px;
 }
 
 .social_icon.social_media {
@@ -133,5 +162,37 @@ body {
 
 .articleTitles {
 	text-align: center;
-	font-family: 'Work Sans', sans-serif;
+	font-family: 'Lobster', cursive;
+}
+
+.titles {
+	display: flex;
+	background-color: #faf8ec;
+	border: 1px solid #3c3c3c;
+	border-radius: 3px;
+	justify-content: center;
+	height: 80px;
+	width: 80%;
+	margin-left: 70px;
+
+}
+
+.goals {
+	display: flex;
+	flex-direction: column;
+}
+
+.goals__title {
+	display: flex;
+	margin-left: 50px;
+}
+
+.goals__text {
+	padding-bottom: 15px;
+	margin-left: 50px;
+}
+
+.content {
+	display: flex;
+	flex-direction: column;
 }
