--- a/rock_paper_scissors/stylesheet.css
+++ b/rock_paper_scissors/stylesheet.css
@@ -9,14 +9,19 @@ li a {
 	justify-content: center;
 }
 
-ul a:hover {
-	background-color: #3f7098;
-	color: black;
+.rpsChoices {
+	display: flex;
 }
 
-#current_page a {
-	background-color: #f90409;
-	color: black;
+.rps {
+	display: flex;
+	padding-top: 100px;
+}
+
+.rpsImage {
+	width: 200px;
+	height: 200px;
+	padding: 20px;
 }
 
 body {
@@ -40,6 +45,11 @@ body {
 	list-style-type: none;
 }
 
+.content {
+	display: flex;
+	flex-direction: column;
+}
+
 .nav-wrapper ul {
 	list-style-type: none;
 }
@@ -54,4 +64,135 @@ body {
 	width: 15px;
 	height: 15px;
 	padding: 0.5%;
+}
+
+
+
+
+
+html {
+	
+	margin: 0;
+	padding: 0;
+}
+
+.link {
+	text-decoration: none;
+	color: #454142;
+}
+
+.link:hover {
+	color: #e5bd7c;
+}
+
+
+.navLinks:hover {
+	background-color: #f9d338;
+	color: black;
+}
+
+#current_page {
+	background-color: #f9d338;
+	color: black;
+}
+
+body {
+	padding: 0;
+	margin: 0;
+}
+
+.flex-container{
+	display: flex;
+	min-height: 100vh;
+}
+
+.nav-wrapper {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 300px;
+}
+
+.navLinks {
+	border: 1px solid #3c3c3c;
+	background-color: #929294;
+	border-radius: 2px;
+	width: 80%;
+	display: flex;
+	justify-content: center;
+	font-family: 'Roboto Slab', serif;
+
+}
+
+.navLinks__links {
+
+}
+
+.sidebar {
+	display: flex;
+	background-color: #646464;
+	list-style-type: none;
+	border-right: 1px solid #3c3c3c;
+	
+}
+
+.nav-wrapper ul {
+	list-style-type: none;
+	font-family: 'Montserrat', sans-serif;
+}
+
+.main {
+	flex: 1 1;
+	padding: 20px;
+	background-color: #faf8ec;
+	font-family: 'Open Sans', sans-serif;
+
+	
+}
+
+.nav {
+	display: flex;
+	flex-direction: column;
+	padding-left: 0px;
+	justify-content: space-between;
+}
+
+.navTitles {
+	padding-left: 40%;
+	font-family: 'Lobster', cursive;
+	font-size: 30px;
+
+
+}
+
+.topLeft {
+	display: flex;
+	flex-direction: column;
+	height: 120px;
+	background: #f9d338;
+}
+
+.topLeft__name {
+	display: flex;
+	justify-content: center;
+	color: #3c3c3c;
+}
+
+.topLeft__icons {
+	display: flex;
+	align-items: flex-start;
+	justify-content: center;
+
+}
+
+.navTitles__page {
+	display: flex;
+	justify-content: flex-start;
+	padding-left: 25%;
+}
+
+.social_icon {
+	width: 30px;
+	height: 30px;
+	padding: 10px;
 }
